# mdns-reflector

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  package-lock.json  package.json  project-words.txt  rust-toolchain.toml  spellcheck.dic
.github/workflows/: build.yml  ci.yml  codeql.yml  container-cleanup.yml  format.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  retag-containers-after-push.yml  semgrep.yml  test-release.yml
crates/mdns-reflector/: Cargo.toml
crates/mdns-reflector/src/: cli.rs  main.rs  reflector.rs  sockets.rs  unix.rs  utils.rs
src/: cli.rs  main.rs  reflector.rs  signal_handlers.rs  sockets.rs  unix.rs
