[package]
name = "mdns-reflector"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.85.0"
authors = ["Kristof Mattei"]
description = "mdns-reflector"
license-file = "LICENSE"
categories = ["network"]
keywords = ["mdns", "reflect", "docker"]
repository = "https://github.com/kristof-mattei/mdns-reflector"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
coverage = []
ip_pktinfo = []
so_bindtodevice = []

[dependencies]
clap = { version = "4.5.31", features = ["cargo", "derive", "string"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
const_format = "0.2.34"
libc = "0.2.170"
socket2 = { version = "0.5.8" }
tokio = { version = "1.44.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
tracing-error = "0.2.1"

# reqwest = { version = "0.11.5", features = ["json"] }
# serde_json = "1.0.68"
# serde = { version = "1.0.130", features = ["derive"] }
# futures = "0.3.17"
# tokio = { version = "1.12.0", features = ["full"] }
# log = "0.4.14"
# env_logger = "0.9.0"
# serde_yaml = "0.8.21"
# clap = { version = "3.0.14", features = ["derive"] }

# OpenSSL for musl
# [target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
